fix widget text position when text is too large

--- a/tcc/apps/tcc/static/admin/global/css/custom.css
+++ b/tcc/apps/tcc/static/admin/global/css/custom.css
@@ -107,3 +107,8 @@ a[data-not-enough-points] {
 h3 .no-case {
   text-transform: initial !important;
 }
+.widget-info .right {
+  padding-left: 0;
+  margin-left: 70px;
+  float: none;
+}
